<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"


    tools:context=".CalclatorActivity">

    <EditText
        android:id="@+id/edt_text1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/enter_number1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/black"


        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/edt_text2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/black"
        android:hint="@string/enter_number2"
        android:inputType="numberDecimal"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        android:layout_marginBottom="20dp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_text"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout2">


        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/add"
            android:textSize="14dp"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="241dp" />

        <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="239dp"
        />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textSize="14sp"
        android:textStyle="bold"
        />


</LinearLayout>