<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
   android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard_Activity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:background="@drawable/custom_top_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp">
  <com.google.android.material.appbar.AppBarLayout
      android:background="@color/top_app_color"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <ImageView
              android:layout_alignParentTop="true"
              android:layout_alignParentStart="true"
              android:layout_marginStart="@dimen/_12sdp"
              android:layout_marginTop="@dimen/_10sdp"
              android:tint="@color/white"
              android:src="@drawable/menu"
              android:layout_width="@dimen/_32sdp"
              android:layout_height="@dimen/_32sdp"
              tools:ignore="UseAppTint" />
          <ImageView
              android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/_12sdp"
              android:layout_marginTop="@dimen/_10sdp"
              android:tint="@color/white"
              android:src="@drawable/notification"
              android:layout_width="@dimen/_32sdp"
              android:layout_height="@dimen/_32sdp"
              tools:ignore="UseAppTint" />

      </RelativeLayout>



  </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_name"
            android:text="Hi, Programmer"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_height="@dimen/_38sdp"
            android:textSize="@dimen/_14ssp"
            android:hint="Search here...."
            android:drawableStart="@drawable/resize_search_icon"
            android:drawablePadding="@dimen/_6sdp"
            android:paddingStart="@dimen/_8sdp"
            android:background="@drawable/custom_edit_text_bg2"


            />




    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/category"
                android:background="@drawable/custom_category_bg"

                android:padding="10dp"
                android:layout_gravity="center"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/black"


                />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_centerInParent="true"
            android:layout_width="match_parent"

            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/resize_icon_class"
                android:padding="10dp"
                android:background="@drawable/custom_class_bg"
                android:layout_gravity="center"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/black"


                />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"

            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/resize_icon_free"
                android:layout_gravity="center"
                android:padding="10dp"
                android:background="@drawable/custom_free_bg"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_course"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/black"


                />



        </androidx.appcompat.widget.LinearLayoutCompat>








    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/resize_icon_bookshop"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center"
                android:background="@drawable/custom_bookstore_bg"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookstore"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/black"


                />



        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/live"
                android:background="@drawable/custom_live_bg"
                android:padding="10dp"
                android:layout_gravity="center"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Live Course"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/black"



                />



        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/resize_leader_icon"
                android:background="@drawable/custom_bg_leader"
                android:padding="@dimen/_8sdp"
                android:layout_gravity="center"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/black"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:id="@+id/txt_cour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Courses"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginStart="12dp"/>
        <TextView
           android:layout_marginEnd="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="See All"
            android:textStyle="bold"
            android:textSize="16dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="@drawable/custom_middle_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:src="@drawable/resize_flutter_icon"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Flutter"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="55 Videos"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="@drawable/custom_middle_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:src="@drawable/resize_native_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="React Native"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="55 Videos"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>